syntax = "proto3";
package penumbra.core.app.v1;

import "penumbra/core/component/auction/v1/auction.proto";
import "penumbra/core/component/community_pool/v1/community_pool.proto";
import "penumbra/core/component/dex/v1/dex.proto";
import "penumbra/core/component/distributions/v1/distributions.proto";
import "penumbra/core/component/fee/v1/fee.proto";
import "penumbra/core/component/funding/v1/funding.proto";
import "penumbra/core/component/governance/v1/governance.proto";
import "penumbra/core/component/ibc/v1/ibc.proto";
import "penumbra/core/component/sct/v1/sct.proto";
import "penumbra/core/component/shielded_pool/v1/shielded_pool.proto";
import "penumbra/core/component/stake/v1/stake.proto";
import "penumbra/core/transaction/v1/transaction.proto";

// Query operations for the overall Penumbra application.
service QueryService {
  // Gets the app parameters.
  rpc AppParameters(AppParametersRequest) returns (AppParametersResponse);
  // Returns the CometBFT transactions that occurred during a given block.
  rpc TransactionsByHeight(TransactionsByHeightRequest) returns (TransactionsByHeightResponse);
}

// Requests the list of all transactions that occurred within a given block.
message TransactionsByHeightRequest {
  // The block height to retrieve.
  uint64 block_height = 2;
}

// A transaction that appeared within a given block.
message TransactionsByHeightResponse {
  // The transactions.
  repeated core.transaction.v1.Transaction transactions = 1;
  // The block height.
  uint64 block_height = 2;
}

message AppParameters {
  // The chain identifier.
  string chain_id = 1;
  // Sct module parameters.
  core.component.sct.v1.SctParameters sct_params = 2;
  // Community Pool module parameters.
  core.component.community_pool.v1.CommunityPoolParameters community_pool_params = 3;
  // Governance module parameters.
  core.component.governance.v1.GovernanceParameters governance_params = 4;
  // IBC module parameters.
  core.component.ibc.v1.IbcParameters ibc_params = 5;
  // Stake module parameters.
  core.component.stake.v1.StakeParameters stake_params = 6;
  // Fee module parameters.
  core.component.fee.v1.FeeParameters fee_params = 7;
  // Distributions module parameters.
  core.component.distributions.v1.DistributionsParameters distributions_params = 8;
  // Funding module parameters.
  core.component.funding.v1.FundingParameters funding_params = 9;
  // Shielded pool module parameters.
  core.component.shielded_pool.v1.ShieldedPoolParameters shielded_pool_params = 10;
  // DEX module parameters.
  core.component.dex.v1.DexParameters dex_params = 11;
  // Auction module parameters.
  core.component.auction.v1.AuctionParameters auction_params = 12;
}

// Requests the global configuration data for the app.
message AppParametersRequest {}

message AppParametersResponse {
  AppParameters app_parameters = 1;
}

message GenesisAppState {
  oneof genesis_app_state {
    GenesisContent genesis_content = 1;
    bytes genesis_checkpoint = 2;
  }
}

message GenesisContent {
  // The initial chain identifier.
  string chain_id = 1;
  // Stake module genesis state.
  core.component.stake.v1.GenesisContent stake_content = 2;
  // Shielded pool module genesis state.
  core.component.shielded_pool.v1.GenesisContent shielded_pool_content = 3;
  // Governance module genesis state.
  core.component.governance.v1.GenesisContent governance_content = 4;
  // IBC module genesis state.
  core.component.ibc.v1.GenesisContent ibc_content = 5;
  // Sct module genesis state.
  core.component.sct.v1.GenesisContent sct_content = 6;
  // Community Pool module genesis state.
  core.component.community_pool.v1.GenesisContent community_pool_content = 7;
  // Fee module genesis state.
  core.component.fee.v1.GenesisContent fee_content = 8;
  // Distributions module genesis state.
  core.component.distributions.v1.GenesisContent distributions_content = 9;
  // Funding module genesis state.
  core.component.funding.v1.GenesisContent funding_content = 10;
  // DEX component genesis state.
  core.component.dex.v1.GenesisContent dex_content = 11;
  // Auction component genesis state.
  core.component.auction.v1.GenesisContent auction_content = 12;
}

// An event triggering when the app parameters change.
message EventAppParametersChange {
  // The new parameters, in their entirety.
  AppParameters new_parameters = 1;
}
